2006-06-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkentry.xml ("inner-border", "truncate-multiline")
	(set_inner_border, get_inner_border): Add.

	* pygtk-gtkcombobox.xml ("popup-shown", "tearoff-title"): Add.

	* pygtk-gtkcellrenderertext.xml ("alignment"): Add.

	* pygtk-gtkbutton.xml ("inner-border", "displace-focus")
	("image-position"): Add new property descriptions.

	* pygtk-gtkcellrendereraccel.xml: Add.

	* pygtk-gtk-classes.xml: Add pygtk-gtkcellrendereraccel.xml

	* pygtk-gtk-constants.xml (GTK CellRendererAccel Mode Constants): Add.

	* pygtk-gtkassistant.xml: Add.

	* pygtk-gtk-classes.xml: Add pygtk-gtkassistant.xml

2006-06-01  John Finlay  <finlay@moeraki.com>

	* pygtk-gtk-constants.xml (Assistant Page Type Constants): Add.

	* pygtk-gdkevent.xml (Attributes): Add common attributes into all
	Event type descriptions, Fixes #339825 (Johan Dahlin).
	Add new 2.8 attributes. Many small improvements.

	* pygtk-gdk-constants.xml: Add Owner Change constants.

2006-05-31  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkdrawable.xml (draw_layout_line): Add.

	* pygtk-gtkwidget.xml (region_intersect): Add.

	* pygtk-gdkcairocontext.xml (set_source_pixmap, region)
	(rectangle): Add.

	* pygtk-gdk-functions.xml (gtk.gdk.region_rectangle): Add link.

	* pygtk-gdkgc.xml (set_clip_region): 

	* pygtk-gdkwindow.xml (get_update_area, invalidate_region)
	(shape_combine_region, input_shape_combine_mask)
	(input_shape_combine_region): Add.

	* pygtk-gdk-classes.xml: Add pygtk-gdk-region.xml.

	* pygtk-gdkregion.xml: Add.

	* pygtk-gdk-constants.xml (overlap-type-constants): Revise description.

2006-05-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gdk-functions.xml (gtk.gdk.event_handler_set): Add link.
	(gtk.gdk.set_show_events, gtk.gdk.event_get_graphics_expose) Fix
	function signatures.

2006-05-26  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeselection.xml (set_select_function): Fix callback
	signature.
