@@ -1,3 +1,8 @@
+2006-06-04  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkclipboard.xml (wait_is_rich_text_available)
+	(wait_for_rich_text, request_rich_text): Add.
+
 2006-06-03  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkentry.xml ("inner-border", "truncate-multiline")
